# ferrispline

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  main.rs  nurbs2bezier.py  nurbs2bezier_test.py  pyproject.toml  requirements.txt  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-pipeline.yml
core_rust/: Cargo.toml
core_rust/src/: ids.rs  lib.rs  model.rs  traits.rs
core_rust/src/core/: controle_point.rs  knot.rs  mod.rs  point.rs
core_rust/src/geometry/: bezier.rs  spline.rs
core_rust/src/geometry/bezier/: control_points.rs  conversion.rs  degree.rs  evaluation.rs  mod.rs  subdivision.rs
core_rust/src/geometry/spline/: control_points.rs  degree.rs  evaluation.rs  extraction.rs  knots.rs  mod.rs
docs/: api_contract_v1.md  technical_reference_v1.md
nurbslib/: Cargo.toml  pyproject.toml
nurbslib/src/: lib.rs  model.rs
nurbslib/src/geometry/: bezier.rs  spline.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs  model.rs
python/src/core/: knot.rs
python/src/geometry/: bezier.rs  mod.rs
sandbox_python/: curve_test.vtk  pyproject.toml
sandbox_python/src/nurbs_math/: core_types.py  load_nurbs.py  main.py  nurbslib_visualisation.py  visualisation.py
sandbox_python/src/nurbs_math/geometry/: bezier.py  nurbs.py  surface.py
sandbox_python/tests/: load_nurbs_test.py  test_load_nurbs.py
sandbox_python/tests/geometry/: nurbs_test.py  test_nurbs.py
sandbox_python/vtk/: curve_test.vtk  simple_curve.vtk
src/nurbs_math/: core_types.py  load_nurbs.py  main.py  visualisation.py
src/nurbs_math/geometry/: bezier.py  nurbs.py  surface.py
tests/: load_nurbs_test.py  nurbs2bezier_test.py  test_load_nurbs.py
tests/geometry/: bezier_test.py  nurbs_test.py  test_bezier.py  test_nurbs.py
