[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ferrispline"
version = "0.1.0"
description = "Conversion's tool of NURBS curve into Bézier curve"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "matplotlib",
    "pyvista",
    "scipy",
    "PyQt5"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
nurbs-convert = "nurbs_math.main:main"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
